# direct-use-exposure-mcp

./: .dockerignore  .gitignore  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Exposure_Scenario_MCP_PRD_v1.docx  Exposure_Scenario_MCP_tasks.json  Exposure_Scenario_MCP_tasks.md  LICENSE  README.md  SECURITY.md  pyproject.toml  two_zone_inhalation_prd.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  monthly_maintenance.yml  semgrep.yml
archetypes/v1/: envelope_archetype_library.json
ci/: mypy_full_tree_baseline.json
defaults/: manifest.json
defaults/v1/: core_defaults.json
docs/: benchmarks.md  capability_maturity_matrix.md  deployment_hardening.md  exposure_platform_architecture.md  herbal_medicinal_routing.md  http_audit_operations.md  literature_mcp_requirements.md  maintainer_operating_model.md  operator_guide.md  provenance_policy.md  red_team_review_memo.md  release_readiness.md  release_runbook.md  release_trust_checklist.md  result_status_semantics.md  security_provenance_review.md  suite_integration.md  test_evidence_summary.md  toxmcp_suite_index.md  troubleshooting.md
docs/adr/: 0001-boundary.md  0002-deterministic-first.md  0003-route-unit-governance.md  0004-repository-slug.md  0005-scientific-invariants-gate.md
docs/contracts/: README.md  contract_manifest.json
docs/releases/: v0.1.0.md  v0.1.0.release_metadata.json  v0.2.0.md  v0.2.0.release_metadata.json  v0.2.1.md  v0.2.1.release_metadata.json
docs/tutorials/: regulatory_screening_walkthrough.md
evals/: exposure_scenario_mcp_readonly.xml
probability_bounds/v1/: driver_probability_profiles.json  scenario_package_probability_profiles.json
schemas/: aggregateExposureSummary.v1.json  applyProductUseEvidenceInput.v1.json  archetypeLibraryManifest.v1.json  archetypeLibrarySet.v1.json  archetypeLibraryTemplate.v1.json  assessProductUseEvidenceFitInput.v1.json  assumptionGovernance.v1.json  buildAggregateExposureScenarioInput.v1.json  buildExposureEnvelopeFromLibraryInput.v1.json  buildExposureEnvelopeInput.v1.json  buildParameterBoundsInput.v1.json  buildProbabilityBoundsFromProfileInput.v1.json  buildProbabilityBoundsFromScenarioPackageInput.v1.json  buildProductUseEvidenceFromSccsInput.v1.json  buildProductUseEvidenceFromSyntheticPolymerMicroparticleInput.v1.json  chemicalIdentity.v1.json  compToxChemicalRecord.v1.json  compareExposureScenariosInput.v1.json  compareJurisdictionalScenariosInput.v1.json  cosIngIngredientRecord.v1.json  defaultsCurationEntry.v1.json  defaultsCurationReport.v1.json  envelopeArchetypeInput.v1.json  envelopeArchetypeResult.v1.json  environmentalReleaseScenario.v1.json  executeWorkerDermalAbsorbedDoseRequest.v1.json  executeWorkerInhalationTier2Request.v1.json  exportPbpkExternalImportBundleRequest.v1.json  exportPbpkScenarioInputRequest.v1.json  exportToxClawEvidenceBundleRequest.v1.json  exportToxClawRefinementBundleRequest.v1.json  exportWorkerArtExecutionPackageRequest.v1.json  exportWorkerDermalAbsorbedDoseBridgeRequest.v1.json  exportWorkerInhalationTier2BridgeRequest.v1.json  exposureAssumptionRecord.v1.json  exposureEnvelopeSummary.v1.json  exposureScenario.v1.json  exposureScenarioDefinition.v1.json  exposureScenarioRequest.v1.json  importWorkerArtExecutionResultRequest.v1.json  (+72 more)
schemas/examples/: aggregate_internal_equivalent_summary.json  aggregate_scenario_request.json  aggregate_summary.json  botanical_supplement_oral_request.json  build_envelope_request.json  capsicum_hydrogel_patch_request.json  chemical_identity.json  comp_tox_enriched_request.json  comp_tox_record.json  compare_jurisdictional_scenarios_request.json  compare_scenarios_request.json  comparison_record.json  concentration_surface.json  cons_expo_evidence_record.json  cons_expo_product_use_evidence.json  cosing_ingredient_record.json  cosing_product_use_evidence.json  dietary_supplement_oral_request.json  environmental_release_scenario.json  export_pbpk_request.json  exposure_envelope_from_library_request.json  (+78 more)
scripts/: __init__.py  build_scientific_invariants_corpus.py  check_mypy_baseline.py  check_release_artifacts.py  collect_showcase_artifacts.py  curate_sources.py  expand_evals.py  generate_contract_assets.py  replay_http_audit.py  scientific_invariants_gate.py  summarize_http_audit.py  validate_evals.py  vendor_verify.py
tests/: test_archetypes.py  test_benchmarks.py  test_china_population.py  test_contracts.py  test_dermal_permeation.py  test_engine.py  test_evals.py  test_evidence_adapter_fixtures.py  test_examples.py  test_failures.py  test_fate_inhalation_woe_roundtrip_bundle.py  test_fate_soil_oral_woe_roundtrip_bundle.py  test_fate_water_oral_woe_roundtrip_bundle.py  test_goldset.py  test_guidance.py  test_healthcheck.py  test_herbal_validation.py  test_http_audit.py  test_http_security.py  test_independent_benchmarks.py  test_inhalation_two_zone.py  test_input_boundaries.py  test_integrations.py  test_jurisdictional_comparison.py  test_mypy_baseline.py  test_oral_supplement_validation.py  test_package_import.py  test_probability_profiles.py  test_readme.py  test_release_artifacts.py  test_result_meta.py  test_scenario_probability_packages.py  test_server_runtime.py  test_server_smoke.py  test_tier1_autorouting.py  test_tier1_inhalation_profiles.py  test_tutorial_assets.py  test_two_zone_solver.py  test_woe_roundtrip_bundle.py  test_worker_dermal.py  (+3 more)
(+177 files in other folders)
