[project]
name = "exposure-scenario-mcp"
version = "0.1.0"
description = "Exposure Scenario MCP for deterministic external exposure construction in the ToxMCP suite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23.0",
  "mcp[cli]>=1.0.0,<2.0.0",
  "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.9",
]

[project.scripts]
exposure-scenario-mcp = "exposure_scenario_mcp.__main__:main"
generate-exposure-contracts = "scripts.generate_contract_assets:main"
check-exposure-release-artifacts = "scripts.check_release_artifacts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exposure_scenario_mcp", "scripts"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
