[project]
name = "exposure-scenario-mcp"
version = "0.1.0"
description = "Direct-Use Exposure MCP for deterministic direct-use and near-field external exposure construction in the ToxMCP suite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23.0",
  "mcp[cli]>=1.0.0,<2.0.0",
  "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.9",
  "mypy>=1.11.0",
  "pip-audit>=2.7.0",
]

[project.scripts]
exposure-scenario-mcp = "exposure_scenario_mcp.__main__:main"
generate-exposure-contracts = "scripts.generate_contract_assets:main"
check-exposure-release-artifacts = "scripts.check_release_artifacts:main"
validate-evals = "scripts.validate_evals:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exposure_scenario_mcp", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
"defaults/v1/core_defaults.json" = "exposure_scenario_mcp/data/defaults/v1/core_defaults.json"
"archetypes/v1/envelope_archetype_library.json" = "exposure_scenario_mcp/data/archetypes/v1/envelope_archetype_library.json"
"tier1_inhalation/v1/screening_parameter_profiles.json" = "exposure_scenario_mcp/data/tier1_inhalation/v1/screening_parameter_profiles.json"
"probability_bounds/v1/driver_probability_profiles.json" = "exposure_scenario_mcp/data/probability_bounds/v1/driver_probability_profiles.json"
"probability_bounds/v1/scenario_package_probability_profiles.json" = "exposure_scenario_mcp/data/probability_bounds/v1/scenario_package_probability_profiles.json"
"validation/v1/executable_reference_bands.json" = "exposure_scenario_mcp/data/validation/v1/executable_reference_bands.json"
"tests/fixtures/benchmark_cases.json" = "exposure_scenario_mcp/data/benchmarks/benchmark_cases.json"
"tests/fixtures/goldset_cases.json" = "exposure_scenario_mcp/data/benchmarks/goldset_cases.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "fix_*.py",
  "generate_parkinson_pbpk.py",
  "generate_thyroid_bounds.py",
  "scripts/generate_mcp_technical_reference_pdf.py",
  "scripts/generate_vhp4safety_*_pdf.py",
  "scripts/generate_vhp4safety_suite_pdfs.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "SIM", "PT"]
per-file-ignores = { "tests/**" = ["S101", "S314", "S603"] }

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
